<resources>
    <string name="app_name">GeoNotes</string>
    <string name="title_activity_main">GeoNotes</string>
    <string name="add_point_string">Добавить точку</string>
    <string name="change_point">Изменить</string>
    <string name="hint_name">Название</string>
    <string name="hint_description">Описание</string>
    <string name="label_radius">Радиус, м</string>
    <string name="label_enable">Оповестить при приближении</string>
    <string name="point_nearby">Рядом с вами отмеченная точка:</string>
</resources>
