<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:rsb="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <EditText
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:id="@+id/name_edit"
                android:gravity="top|center_horizontal"
                android:textSize="20sp"
                android:layout_margin="10dp"
                android:hint="@string/hint_name"/>
            <EditText
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:id="@+id/description_edit"
                android:gravity="top|center_horizontal"
                android:textSize="20sp"
                android:layout_margin="10dp"
                android:hint="@string/hint_description"/>
            <TextView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:text="@string/label_radius"/>

            <org.florescu.android.rangeseekbar.RangeSeekBar
                android:id="@+id/radius_bar"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                rsb:textAboveThumbsColor="@color/colorAccent"
                rsb:absoluteMaxValue="1000.0"
                rsb:activeColor="@color/colorAccent"
                rsb:absoluteMinValue="50.0"
                rsb:singleThumb="true"/>

            <CheckBox
                android:id="@+id/enable_alarm"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:checked="true"
                android:layout_margin="20dp"
                android:text="@string/label_enable"/>

            <RelativeLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/change_point_button"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/ic_edit_location"
                    android:backgroundTint="@color/colorPrimary"
                    android:contentDescription="@string/change_point" />
                <ImageButton
                    android:id="@+id/search_point_button"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/ic_search"
                    android:backgroundTint="@color/colorPrimary"
                    android:contentDescription="@string/change_point"
                    android:layout_alignParentEnd="true"/>
                <TextView
                    android:id="@+id/coordinates_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@id/change_point_button"
                    android:layout_toStartOf="@id/search_point_button"
                    android:textSize="20sp"/>
                </RelativeLayout>
        </LinearLayout>
    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/add_point_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="32dip"
        app:backgroundTint="@color/colorAccent"
        app:srcCompat="@drawable/ic_add_location" />

</android.support.design.widget.CoordinatorLayout>
